Aggiunte descrizioni swagger
