# middleware/ensureAuth.js
@@ -1,5 +1,6 @@
 module.exports.ensureAuth = function (req, res, next) {
       if (!req.isAuthenticated()) {
+        res.status(403)
         req.session.returnTo = req.originalUrl
         req.flash('error', 'Effettua il login')
         return res.redirect("/users/login");
