# routes/index.js
@@ -3,11 +3,11 @@ var router = express.Router();
 
 /* GET home page. */
 router.get('/', function(req, res, next) {
+  /*
+    #swagger.summary = "Render home page"
+    */
   res.render('index', { title: 'Express' });
 });
 
-router.get('/prova', function(req, res) {
-  res.send("Questa è la pagina di prova")
-})
 
 module.exports = router;
